--- a/package.json
+++ b/package.json
@@ -6,16 +6,40 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "list": "node scripts/dev.js list",
+    "generate": "node scripts/dev.js generate",
+    "parse-prd": "node scripts/dev.js parse-prd"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@visx/hierarchy": "^3.12.0",
+    "@visx/shape": "^3.12.0",
+    "boxen": "^8.0.1",
+    "chalk": "^4.1.2",
     "class-variance-authority": "^0.7.1",
+    "cli-table3": "^0.6.5",
     "clsx": "^2.1.1",
+    "commander": "^11.1.0",
+    "cors": "^2.8.5",
+    "d3-hierarchy": "^3.1.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.21.2",
+    "fastmcp": "^1.20.5",
+    "figlet": "^1.8.0",
+    "fuse.js": "^7.0.0",
+    "gradient-string": "^3.0.0",
+    "helmet": "^8.1.0",
+    "inquirer": "^12.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^10.2.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.5",
+    "openai": "^4.89.0",
+    "ora": "^8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.2",
@@ -29,5 +53,6 @@
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "type": "module"
 }
