--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -2,7 +2,7 @@
 #
 # To get started with Next.js see: https://nextjs.org/docs/getting-started
 #
-name: MBTI Decision Matrix
+name: MBTI Brain
 
 on:
   # Runs on pushes targeting the default branch
