--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -55,12 +55,18 @@ jobs:
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+      - name: Remove output export line from next.config.js
+        run: |
+          sed -i.bak '/output:/d' next.config.js
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
           # Automatically inject basePath in your Next.js configuration file and disable
           # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
           static_site_generator: next
+      - name: Restore original next.config.js
+        run: |
+          mv next.config.js.bak next.config.js
       - name: Restore cache
         uses: actions/cache@v4
         with:
