--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:prod": "NODE_ENV=production next build",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
     "clean": "rm -rf .next out",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
@@ -61,6 +62,7 @@
     "@types/react-dom": "^18.3.6",
     "next-sitemap": "^4.2.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.1"
   }
 }
