--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "next-sitemap": "^4.2.3",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vitest": "^3.2.1"
+    "vitest": "^3.2.1",
+    "eslint": "^8",
+    "eslint-config-next": "^15"
   }
 }
