--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.0",
@@ -40,11 +41,11 @@
     "@types/node": "^20",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
+    "eslint": "^8",
+    "eslint-config-next": "^15",
     "next-sitemap": "^4.2.3",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vitest": "^3.2.1",
-    "eslint": "^8",
-    "eslint-config-next": "^15"
+    "vitest": "^3.2.1"
   }
 }
