--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "commander": "^11.1.0",
@@ -37,6 +39,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.2",
     "tailwind-merge": "^3.2.0",
+    "three": "^0.177.0",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
@@ -45,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
+    "@types/three": "^0.177.0",
     "eslint": "^8",
     "eslint-config-next": "^15",
     "next-sitemap": "^4.2.3",
