--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^15.3.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
