--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/three": "^0.177.0",
+    "@vitest/coverage-v8": "^3.2.1",
     "eslint": "^8",
     "eslint-config-next": "^15",
     "next-sitemap": "^4.2.3",
